Updated paragraph for responsive portfolio

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
                     <h2>About Me</h2>
                     <hr>
                     <img src="https://media.licdn.com/dms/image/C4D03AQGdb2m8CBG27w/profile-displayphoto-shrink_100_100/0?e=1564617600&v=beta&t=0iy56ZaXQnYQVAFrzDcnFowMAJ5RGbTqsnk5yOkGJQ0">
-                    <p>I am an artist that likes creativity. When it comes to Technology I also love seeing new inventions that people have created. Having those two togther as a interest and talent I want to create something of my own, even if it's for another company. Just thinking about what I have learn to create something out of nothing brings joy. <br><br>
-                    I have the dedication to build and creative to make something useful for people or even entertainment. Also, I'm always ready to improve on my skills and to learn more.
+                    <p>Creative-driven Front-End Web Developer focused on building an attractive webpages. Educated at The Art Institute of 
+                        Charlotte for Graphic Design and still attending Central Piedmont Community College for an Associate in Simulation and 
+                        Gaming Development. Studying at The University of North Carolina at Charlotte Continuing Education Full Stack Flex 
+                        Program with skills in Visual Studio Code, Visual Studio 2019, Maya, CSS, HTML, Javascript, Adobe Illustrator, and 
+                        Adobe Photoshop. My passion for creativity and technology brought me to the front-end. As a front-end developer, I 
+                        take empty blank screen of nothing and turn it into a creative masterpiece by telling the computer what to do. 
+                        Strengths in art design, creativity, a mind for learning, and completing projects with initiative. I want to be in a 
+                        position to build a website with my creativity using technology.
                     </p>
                 </div>
             </section>
