--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,19 @@
         <div class="container fullBox">
         <h2>Portfolio</h2>
         <hr>
-        <div class="container photo">
-            <img src="https://cdn.tutsplus.com/active/uploads/legacy/tuts/339_getUpToSpeedWithHTML/Beginner_HTML_Tutorial.png">
-            <div class="centered">HTML Skills</div>
-        </div>
+        <a href="https://izzyharvin.github.io/Word-Guess-Game/">
+            <div class="container photo">
+                <img src="https://is3-ssl.mzstatic.com/image/thumb/Purple71/v4/81/66/ec/8166ec48-3566-ea7e-f07e-ef54e4777a81/source/512x512bb.jpg">
+                <div class="centered">Guess the Word Game</div>
+            </div>
+        </a>
 
-        <img src="https://hackr.io/tutorials/learn-css/logo/logo-css?ver=1550727061">
+        <a href="https://izzyharvin.github.io/unit-4-game/">
+            <div class="container photo">
+                <img src="https://avatarfiles.alphacoders.com/184/184013.jpg">
+                <div class="centered">Avengers Fighting Game</div>
+            </div>
+        </a>
 
         <img src="https://d2eip9sf3oo6c2.cloudfront.net/tags/images/000/000/205/thumb/javascriptlang.png">
 
