Clean up portfolio and change links

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic-Portfolio</title>
-    <link rel="stylesheet" href="./style/style2.css">
+    <link rel="stylesheet" href="./style/contact.css">
 </head>
 
 <body>
